--- a/package.json
+++ b/package.json
@@ -31,18 +31,20 @@
     "test": "node ./out/test/runTest.js"
   },
   "dependencies": {
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "ws": "^8.12.1"
   },
   "devDependencies": {
-    "@types/vscode": "^1.76.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.76.0",
+    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
+    "@vscode/test-electron": "^2.2.3",
     "eslint": "^8.34.0",
     "glob": "^8.1.0",
-    "mocha": "^10.2.0",
-    "@vscode/test-electron": "^2.2.3"
+    "mocha": "^10.2.0"
   }
 }
