Add esbuild & vsix packaging

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
   },
   "plugins": ["@typescript-eslint"],
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
-  "ignorePatterns": ["out", "dist", "**/*.d.ts"],
+  "ignorePatterns": ["dist", "**/*.d.ts"],
   "rules": {
     // stupid
     "@typescript-eslint/ban-ts-comment": "off",
