--- a/package.json
+++ b/package.json
@@ -75,5 +75,6 @@
     ],
     "sponsor": {
         "url": "https://github.com/sponsors/Vendicated"
-    }
+    },
+    "homepage": "https://github.com/Vencord/Companion"
 }
