remove among us

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vencord-companion",
     "displayName": "Vencord Companion",
     "version": "0.1.3",
-    "description": "Vencord Companion is a vscode extension to test Vencord/Replugged patches & webpack finds right from the comfort of your IDE",
+    "description": "Vencord Companion is a vscode extension to test Vencord patches & webpack finds right from the comfort of your IDE",
     "categories": [
         "Other",
         "Snippets",
@@ -11,7 +11,6 @@
     "keywords": [
         "Discord",
         "Vencord",
-        "Replugged",
         "Modding",
         "Typescript"
     ],
